# crag-genai-hr-assistant

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Models/: grok.py
RAG/: crag.py
Vectorestores/: faissDb.py
